--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,5 @@
 html {
-  font-family: 'Bevan', cursive, sans-serif;
+  font-family: Bevan, cursive, sans-serif;
   background-color: #dbd6cf;
   box-sizing: border-box;
 }
@@ -18,9 +18,6 @@ nav {
   display: block;
 }
 
-.intro {
-  text-align: left;
-}
 
 
 *, *::before, *::after {
