--- a/css/main.css
+++ b/css/main.css
@@ -1,24 +1,32 @@
-html {
+body {
   font-family: Bevan, cursive, sans-serif;
   background-color: #dbd6cf;
   box-sizing: border-box;
 }
 
 h1 {
-  font-family: sans-serif;
+  background-color: #79756f;
   color: #fff;
+  text-align: center;
+  margin-top: .3em;
+  padding: 0;
+}
+
+nav ul {
+  margin: 0;
+  padding: 0;
+  text-align: center;
+  list-style-type: none;
+}
+
+nav li {
+  display: inline;
+}
+
+nav a {
+  color: #fff;
+  display: inline-block;
+  background-color: #713837;
+  text-align: center;
   padding: .5em;
-  text-align: center;
-  background-color: #79756f;
-}
-
-nav {
-  background-color: #79756f;
-  color: #dbd6cf;
-  text-align: center;
-  display: block;
-}
-
-*, *::before, *::after {
-  box-sizing: inherit;
 }
