--- a/css/main.css
+++ b/css/main.css
@@ -5,15 +5,18 @@ html {
 }
 
 body {
+  line-height: 1.5;
   margin: .3em;
 }
 
+header {
+  background-color: #595652;
+}
+
 h1 {
-  font-family: Bevan, sans-serif;
-  background-color: #79756f;
+  font-family: Bevan, cursive, sans-serif;
   color: #fff;
   text-align: center;
-  margin-top: .3em;
   padding: 0;
 }
 
