--- a/css/main.css
+++ b/css/main.css
@@ -8,7 +8,7 @@ html {
 
 body {
   margin: 0;
-  font-family: Bevan, cursive, sans-serif;
+  font-family: Bevan, serif;
   line-height: 1.5;
   background-color: #dbd6cf;
 }
