--- a/css/main.css
+++ b/css/main.css
@@ -15,7 +15,6 @@ body {
 
 header {
   margin: .3em;
-  padding: .6em;
   border-radius: 5px;
   border-width: .5em;
   border-color: #595652;
@@ -26,12 +25,12 @@ h1 {
   font-family: Bevan, serif;
   color: #fff;
   text-align: center;
-  padding: 0;
+  padding: .6em;
 }
 
 nav ul {
   margin: 0;
-  padding: 0;
+  padding: .75em;;
   text-align: center;
   list-style-type: none;
 }
