--- a/css/main.css
+++ b/css/main.css
@@ -7,16 +7,18 @@ html {
 }
 
 body {
-  margin: 0;
+  color: #595652;
+  border-radius: 10px 10px;
+  border-width: 10px 10px;
+  border-color: #595652;
+  margin: 5px 10px;
   background-color: #dbd6cf;
 }
 
 header {
+  border-color: #595652;
   line-height: 1.5;
   margin: 0;
-  border-radius: 0;
-  border-width: 0;
-  border-color: #595652;
   background-color: #79756f;
 }
 
