--- a/css/main.css
+++ b/css/main.css
@@ -11,7 +11,7 @@ body {
   border-radius: 10px 10px;
   border-width: 10px 10px;
   border-color: #595652;
-  margin: 5px 10px;
+  margin: 0;
   background-color: #dbd6cf;
 }
 
