--- a/css/main.css
+++ b/css/main.css
@@ -8,8 +8,8 @@ html {
 
 body {
   color: #595652;
-  border-radius: 10px 10px;
-  border-width: 10px 10px;
+  border-radius: 10px;
+  border-width: 10px;
   border-color: #595652;
   margin: 0;
   background-color: #dbd6cf;
