--- a/css/main.css
+++ b/css/main.css
@@ -7,7 +7,6 @@ html {
 }
 
 body {
-  color: #595652;
   border-radius: 10px;
   border-width: 10px;
   border-color: #595652;
@@ -16,7 +15,7 @@ body {
 }
 
 header {
-  border-color: #595652;
+  color: #595652;
   line-height: 1.5;
   margin: 0;
   background-color: #79756f;
@@ -53,4 +52,9 @@ nav a {
 
 nav a:hover {
   background-color: #f33;
+}
+
+.p {
+  margin: 0;
+  padding: 0;
 }
