--- a/css/main.css
+++ b/css/main.css
@@ -63,7 +63,7 @@ nav a:hover {
 }
 
 h1 {
-  line-height: 1.
+  line-height: 1.5;
   font-family: Bevan, serif;
   margin: 0;
   padding: .5em, .75em;
