--- a/css/main.css
+++ b/css/main.css
@@ -56,8 +56,6 @@ nav a:hover {
   border-radius: 8px;
 }
 
-}
-
 .nav {
   margin: 0;
 }
@@ -66,5 +64,5 @@ h1 {
   line-height: 1.5;
   font-family: Bevan, serif;
   margin: 0;
-  padding: .5em, .75em;
+  padding: .6em, .5em, .75em;
 }
