--- a/css/main.css
+++ b/css/main.css
@@ -64,5 +64,5 @@ h1 {
   line-height: 1.5;
   font-family: Bevan, serif;
   margin: 0;
-  padding: .6em, .5em, .75em;
+  padding: .6em .5em .75em;
 }
