--- a/css/main.css
+++ b/css/main.css
@@ -43,6 +43,7 @@ nav a {
   padding: .6em;
   margin: .3em;
   text-decoration: none;
+  border-radius: 3px;
 }
 
 nav a:hover {
@@ -56,7 +57,7 @@ nav a:hover {
   border-radius: 8px;
 }
 
-.nav {
+nav {
   margin: 0;
 }
 
@@ -64,5 +65,5 @@ h1 {
   line-height: 1.5;
   font-family: Bevan, serif;
   margin: 0;
-  padding: .6em .5em .75em;
+  padding: 0;
 }
